Corrigindo erro no notebook PVI

--- a/problema_valor_inicial.ipynb
+++ b/problema_valor_inicial.ipynb
@@ -8030,14 +8030,12 @@
     "\n",
     "Assim, temos que o Método de Runge-Kutta é definido por:\n",
     "\n",
-    "$$ w_{k+1} = w_k + h (\\alpha \\theta_1 + \\beta \\theta_2)$$\n",
+    "$$ w_{k+1} = w_k + h (\\alpha \\theta_1 + \\beta \\theta_2) $$\n",
     "\n",
     "$$ \\theta_1 = f(t_k, w_k) $$\n",
     "$$ \\theta_2 = f(t_k + \\delta h, w_k + \\gamma h \\theta_1) $$\n",
     "\n",
-    "$$ \\begin{cases}\\alpha + \\beta = 1 \\\\ \n",
-    "\\delta \\beta = \\frac{1}{2} \\\\ \n",
-    "\\gamma \\beta = \\frac{1}{2} \\end{cases}$$"
+    "$$ \\begin{cases}\\alpha + \\beta = 1 \\\\ \\delta \\beta = \\frac{1}{2} \\\\ \\gamma \\beta = \\frac{1}{2} \\end{cases}$$"
    ]
   },
   {
